<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitnessHome</string>
    <string name="giris">Giriş</string>
    <string name="yenihesapolustur">YENİ HESAP OLUŞTUR</string>
    <string name="yenihesapol">YENİ HESAP OLUŞTUR</string>
    <string name="kullaniciadi">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="sifre">Şifre</string>
    <string name="hesapolustur">HESAP OLUŞTUR</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="dogumtarihi">Doğum Tarihi</string>
    <string name="boy">Boy</string>
    <string name="kilo">Kilo</string>
    <string name="girisyap">GİRİŞ YAP</string>
    <string name="fitness_home">FITNESS HOME</string>
    <string name="hesabim">HESABIM</string>
    <string name="antrenmanlar">ANTRENMANLAR</string>
    <string name="bodyMassIndeksButtonLabel">VÜCUT KİTLE İNDEKSİM</string>
    <string name="harita">HARİTA</string>
    <string name="hava_durumu">HAVA DURUMU</string>
    <string name="digerrdbtn">Diğer</string>
    <string name="cinsiyetrdbtn">Cinsiyet</string>
    <string name="erkekrdbtn">Erkek</string>
    <string name="kadinrdbtn">Kadın</string>
    <string name="hesapla">HESAPLA</string>
    <string name="boy_cm">Boy (cm)</string>
    <string name="kilo_kg">Kilo (kg)</string>

    <string name="faz1_bmi">Zayıf</string>
    <string name="faz2_bmi">Normal Kilolu</string>
    <string name="faz3_bmi">Fazla Kilolu</string>
    <string name="faz4_bmi">Obez</string>
    <string name="faz5_bmi">İleri Derece Obez(Morbid Obez)</string>

    <string name="label_user_bmi">Vücut Kitle İndeksiniz</string>
    <string name="label_user_calc_bmi">Vücut Kitle İndeksi Hesaplama</string>
    <string name="bmi_who_classification">18, 5 kg/m.\'nin altında olanlar: Zayıf \n18.5 – 24, 9 kg/m. arasında olanlar: Normal kilolu\n25 – 29, 9 kg/m. arasında olanlar: Fazla kilolu\n30 – 39, 9 kg/m. arasında olanlar: Obez\n40 kg/m.\'nin üzerinde olanlar: İleri derecede obez (morbid obez) </string>
    
    <string name="Baslik">Baslik</string>
    <string name="Aciklama">Aciklama</string>

    /İlk ekranda görünecek Program başlıkları ve açıklamaları
    <string-array name="Antreman_Programlari">
        <item>Daily Posture Routine</item>
        <item>Mobility Routine</item>
        <item>Core Training for beginners</item>
    </string-array>

    <string-array name="Aciklama">
        <item>Vücud duruşunuzu düzeltmek için günlük yapılabilecek antrenman</item>
        <item>Mobilitenizi düzeltmek ve geliştirmek için</item>
        <item>Yeni başlayanlar için evde karın antrenmanı</item>
    </string-array>


    // 1.antrenman programının hareketleri ve açıklamaları
    <string-array name="Posture">
        <item>Over and Back</item>
        <item>Cobra Pose</item>
        <item>Stand and Reach</item>
        <item>Wall Slides w Chin Nod</item>
        <item>Quadruped Thoracic Rotations</item>
        <item>Kneeling Hip Flexor Stretch</item>
        <item>Pigeon Stretch</item>
        <item>Glute Bridges</item>
    </string-array>

    <string-array name="Posture_Aciklama">
        <item>~10~15 yavaş tekrar</item>
        <item>~5~10  tekrar ve tepede noktada bekle</item>
        <item>İki tarafa da 5~10  tekrar ve tepe noktada bekle</item>
        <item>~10~15 yavaş tekrar x 2set</item>
        <item>İki tarafa da ~10 tekrar ve tepe noktada bekle</item>
        <item>İki tarafa da ~30~45 saniye bekle</item>
        <item>İki tarafa da ~30~45 saniye bekle</item>
        <item>~10~15  tekrar ve tepe noktada bekle x2 set</item>
    </string-array>

    // 2.antrenman programının hareketleri ve açıklamaları

    <string-array name="Mobility">
        <item>Towel Stretch</item>
        <item>Thoraric Extensions	</item>
        <item>Cat Cows	</item>
        <item>90/90 Drill</item>
        <item>Bench Ankle Mobilization</item>
        <item>Weighted Goblet Squat </item>

    </string-array>

    <string-array name="Mobility_Aciklama">
        <item>Her kol içn ~5~10 tekrar</item>
        <item>~5~10 Tekrar</item>
        <item>Her iki yöne de 6 tekrar</item>
        <item>Her yöne ~5~10 Tekrar</item>
        <item>Her bacak için  ~5~10 Tekrar</item>
        <item>~30~60 saniye bekle</item>

    </string-array>

    // 3.antrenman programının hareketleri ve açıklamaları

    <string-array name="Core">
        <item>Leg Raise   </item>
        <item>Reach Troughs</item>
        <item>Reverse Crunches</item>
        <item>Dead bugs </item>
        <item>Hollow Body</item>
        <item>Plank </item>
        <item>Rest</item>

    </string-array>

    <string-array name="Core_Aciklama">
        <item>kontrollü  ~10~15 tekrar</item>
        <item>kontrollü  ~10~15 tekrar</item>
        <item>kontrollü  ~10~15 tekrar</item>
        <item>her iki tarafınada 10 tekrar</item>
        <item>~20~30 saniye bekle</item>
        <item>~20~30 saniye bekle</item>
        <item>Tüm hareketleri yapdıktan sonra 1dk dinlen</item>
    </string-array>
    <string name="title_activity_antrenman_programlari">antrenmanProgramlari_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>

    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBrezll8Zf9O3rCE-_KKuUVqrWODKVGnoA</string>

</resources>