<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".girisactivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin" />

    <EditText
        android:id="@+id/txtemailgiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <EditText
        android:id="@+id/txtsifregiris"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemailgiris"
        android:hint="@string/sifre"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/btngiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisyap"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="350dp"
        android:background="@color/silver"

        />


</RelativeLayout>